<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/starter_pokemon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_menu_starter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayInputLayout" />

    <TextView
        android:id="@+id/register_menu_birthday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_menu_birthday_title_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_options" />

    <TextView
        android:id="@+id/male_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_menu_sex_male_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/register_menu_sex_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_menu_sex_title" />

    <TextView
        android:id="@+id/female_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_menu_sex_female_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sex_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_menu_sex_title"
        app:layout_constraintTop_toBottomOf="@+id/register_menu_sex_title" />

    <TextView
        android:id="@+id/register_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_menu_title_text"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_menu_name_title_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_menu_title" />

    <TextView
        android:id="@+id/powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/powered_by"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_menu_sex_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_menu_sex_title_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout" />

    <ImageView
        android:id="@+id/register_menu_left_half"
        android:layout_width="82dp"
        android:layout_height="84dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:rotation="270"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toStartOf="@+id/register_menu_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/half_of_pokeball"
        app:tint="?android:textColor" />

    <ImageView
        android:id="@+id/register_menu_right_half"
        android:layout_width="82dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:rotation="90"
        android:scaleType="fitEnd"
        app:layout_constraintStart_toEndOf="@+id/register_menu_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/half_of_pokeball"
        app:tint="?android:textColor" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="?android:colorPrimary"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="?android:colorPrimary"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/register_menu_name_input_helper"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="?android:textColor"
            android:textColorHint="?colorOnSurfaceVariant"
            android:drawableRight="@drawable/badge_icon" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayInputLayout"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="?android:colorPrimary"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="?android:colorPrimary"
        app:hintTextColor="?colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_menu_birthday_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/register_menu_name_birthday_helper"
            android:inputType="date"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="?android:textColor"
            android:drawableRight="@drawable/caldendar_icon" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/sex_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_menu_sex_title">

        <RadioButton
            android:id="@+id/sex_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="88dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:scaleX="1.5"
            android:scaleY="1.5" />

        <RadioButton
            android:id="@+id/sex_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:scaleX="1.5"
            android:scaleY="1.5" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/starterOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charmander_image">

        <RadioButton
            android:id="@+id/bulbasaur_picked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="95dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:scaleX="1.5"
            android:scaleY="1.5" />

        <RadioButton
            android:id="@+id/charmander_picked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:scaleX="1.5"
            android:scaleY="1.5" />

        <RadioButton
            android:id="@+id/squirtle_picked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:scaleX="1.5"
            android:scaleY="1.5" />
    </RadioGroup>

    <ImageView
        android:id="@+id/bulbasaur_image"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/charmander_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starter_pokemon_title"
        app:srcCompat="@drawable/bulbasaur" />

    <ImageView
        android:id="@+id/charmander_image"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starter_pokemon_title"
        app:srcCompat="@drawable/charmander" />

    <ImageView
        android:id="@+id/squrtle_image"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/charmander_image"
        app:layout_constraintTop_toBottomOf="@+id/starter_pokemon_title"
        app:srcCompat="@drawable/squirtle" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_menu_register_button_text"
        android:textColor="?android:textColor"
        android:textSize="24sp"
        app:cornerRadius="7dp"
        app:layout_constraintBottom_toTopOf="@+id/powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starterOptions" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sex_options"
        app:layout_constraintStart_toEndOf="@+id/sex_options"
        app:layout_constraintTop_toTopOf="@+id/sex_options"
        app:srcCompat="@drawable/female_icon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sex_options"
        app:layout_constraintEnd_toStartOf="@+id/sex_options"
        app:layout_constraintTop_toTopOf="@+id/sex_options"
        app:srcCompat="@drawable/male_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>